--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">我的小宝贝，我爱你</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">我的傻宝宝阿</span><br>
         <span class="say"> </span><br>
-        <span class="say">这首歌是你送给我的，现在我把它放在这儿</span><br>
+        <span class="say">我爱你哦</span><br>
         <span class="say"> </span><br>
-        <span class="say"> 但是我会用行动证明一切</span><br>
+        <span class="say"> 你说我老是放乱七八糟的歌</span><br>
         <span class="say"> </span><br>
-        <span class="say">你说我啰嗦，</span><br>             
-            <span class="say"> 有些东西因为越在乎所以越怕失去</span><br>
+        <span class="say">今天只放这首你最喜欢的</span><br>             
+            <span class="say">（真相是我的技术不行)</span><br>
             <span class="say"> </span><br>
-        <span class="say">因为我太爱你了，所以我害怕失去你</span><br>
+        <span class="say">终于等到你，还好我们都没放弃</span><br>
                 <span class="say"> </span><br>
         <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
                 <span class="say"> </span><br>
@@ -58,7 +58,7 @@
       </div>
     </div>
     
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#FF4500">亲爱的宝宝，我爱你</font> <span class="STYLE1">已经是……</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#FF4500">傻宝宝，我们在一起</font> <span class="STYLE1">已经</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
