--- a/index.html
+++ b/index.html
@@ -30,28 +30,28 @@
   <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
   <div id="wrap">
     <div id="text">
-      <div id="code"> <font color="#FF0000"> <span class="say">我的傻宝宝阿</span><br>
+      <div id="code"> <font color="#FF0000"> <span class="say">我的傻宝宝呀</span><br>
         <span class="say"> </span><br>
         <span class="say">我爱你哦</span><br>
         <span class="say"> </span><br>
         <span class="say"> 你说我老是放乱七八糟的歌</span><br>
         <span class="say"> </span><br>
-        <span class="say">今天只放这首你最喜欢的</span><br>             
-            <span class="say">（真相是我的技术不行)</span><br>
+        <span class="say">那这里我只放你最喜欢的</span><br>             
+            <span class="say">心情不好的时候 就来这听听吧</span><br>
             <span class="say"> </span><br>
         <span class="say">终于等到你，还好我们都没放弃</span><br>
                 <span class="say"> </span><br>
-        <span class="say">因为我太爱你了，所以我对你总啰嗦</span><br>
+        <span class="say">你看到的今天</span><br>
                 <span class="say"> </span><br>
-        <span class="say">希望可以执子之手，与子偕老</span><br>
+        <span class="say">是我们的第一个一百天</span><br>
                 <span class="say"> </span><br>
-        <span class="say">如果上天让我许三个愿望，</span><br>
-                <span class="say">第一个是今生今世和你在一起， </span><br>
+        <span class="say">接下来的无数个一百天</span><br>
+                <span class="say"> 会比今天更有感觉 </span><br>
              <span class="say"> </span><br>
-             <span class="say"> 第二个是再生再世和你在一起，</span><br>
+             <span class="say"> 每一天都看着你开开心心</span><br>
              <span class="say"> </span><br>
-             <span class="say">第三个是永生永世和你不分离 </span><br>
-        <span class="say"><span class="space"></span> -- 爱你的傻狗</span> </font>
+             <span class="say">爱你一辈子 </span><br>
+        <span class="say"><span class="space"></span> -- BY一只傻狗</span> </font>
             <br />
             <br />
         </p>
