--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
         <span class="say">接下来的无数个一百天</span><br>
                 <span class="say"> 会比今天更有感觉 </span><br>
              <span class="say"> </span><br>
-             <span class="say"> 每一天都看着你开开心心</span><br>
+             <span class="say"> 今日故事 </span><br>
              <span class="say"> </span><br>
-             <span class="say">爱你一辈子 </span><br>
+             <span class="say"> 从前有个人 他爱你一辈子 </span><br>
         <span class="say"><span class="space"></span> -- BY一只傻狗</span> </font>
             <br />
             <br />
