--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
     </div>
     
-    <div id="clock-box"> <span class="STYLE1"></span><font color="#FF4500">傻宝宝，我们在一起</font> <span class="STYLE1">已经</span>
+    <div id="clock-box"> <span class="STYLE1"></span><font color="#FF4500">傻宝宝,从我说爱你一辈子那一刻</font> <span class="STYLE1">已经过去了</span>
       <div id="clock"></div>
     </div>
     <canvas id="canvas" width="1100" height="680"></canvas>
